--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="edu.asu.bsse.biespana.layoutswidgets.MainActivity">
+    tools:context="edu.asu.bsse.biespana.lab5uiadapters.MainActivity">
 
     <ListView
         android:id="@+id/listOfWaypoints"
         android:layout_width="match_parent"
         android:layout_height="300dp">
     </ListView>
+
     <Button
         android:id="@+id/addWay"
         android:text="@string/addWaypoint"
